Завершение интерфейса пользователя в React + исправления по Лаб 7

--- a/resources/ShipCard.css
+++ b/resources/ShipCard.css
@@ -61,15 +61,18 @@
 
 .ship-btn {
   width: 100%;
-  max-width: 489px;
+  width: 489px;
   padding: 14px 32px;
-  background-color: #AA9B7D;
+  background-color: #AA9B7D !important;
   color: #fff;
   border: none;
   border-radius: 5px;
   font-size: 20px;
   font-weight: 500;
   cursor: pointer;
+}
+.ship-btn:hover {
+  background-color: #917b4e !important ;
 }
 
 /*  АДАПТИВ  */
