--- a/resources/index_style.css
+++ b/resources/index_style.css
@@ -66,6 +66,19 @@ p  { font-size: 25px; }
   white-space: nowrap;
   min-width: 165px;         
 }
+.search-btn:hover {
+  background-color: #917b4e;
+}
+
+.header_links {
+  display: 'flex';
+  flex-direction: row !important;
+  gap: '60px';
+  justify-content: space-around;
+}
+.user_login {
+  padding-right: 20px !important;
+}
 
 /*  КАРТОЧКИ  */
 .ship-cards {
@@ -86,6 +99,10 @@ p  { font-size: 25px; }
   justify-content: center;
 }
 
+.request__cnt {
+  float: left !important;
+}
+
 /*  ИКОНКИ  */
 .header-icon,
 .cart-link-icon,
@@ -94,6 +111,39 @@ p  { font-size: 25px; }
   width: auto;
   min-width: 40px;
   flex-shrink: 0;
+  
+}
+
+.cart-link-icon {
+    position: relative;
+    display: inline-block; /* чтобы позиционировать дочерние элементы */
+    text-decoration: none;
+    cursor: pointer;
+    
+}
+
+.cart-link--disabled {
+    cursor: none;
+    opacity: 0.5;
+    filter: grayscale(100%); 
+}
+
+
+.cart-count {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    background-color: #AA9B7D;
+    color: white;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    font-size: 12px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
 }
 
 /*  АДАПТИВ  */
@@ -137,6 +187,7 @@ p  { font-size: 25px; }
     font-size: 18px;
     height: 51px;
   }
+  
 
   .search-btn {
     padding: 12px 40px;
